--- a/PoliLockApp/package.json
+++ b/PoliLockApp/package.json
@@ -25,6 +25,7 @@
     "@types/react-router-dom": "^5.3.3",
     "ionicons": "^7.0.0",
     "lottie-react": "^2.4.0",
+    "mqtt": "^5.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.1",
