logs list component

--- a/PoliLockApp/package.json
+++ b/PoliLockApp/package.json
@@ -20,9 +20,11 @@
     "@hookform/error-message": "^2.0.1",
     "@ionic/react": "^7.0.0",
     "@ionic/react-router": "^7.0.0",
+    "@supabase/supabase-js": "^2.41.1",
     "@types/react-lottie": "^1.2.10",
     "@types/react-router": "^5.1.20",
     "@types/react-router-dom": "^5.3.3",
+    "date-fns": "^3.6.0",
     "ionicons": "^7.0.0",
     "lottie-react": "^2.4.0",
     "mqtt": "^5.5.0",
