--- a/PoliLockApp/package.json
+++ b/PoliLockApp/package.json
@@ -12,6 +12,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@capacitor/android": "^5.7.4",
     "@capacitor/app": "5.0.7",
     "@capacitor/core": "5.7.4",
     "@capacitor/haptics": "5.0.7",
@@ -27,7 +28,7 @@
     "date-fns": "^3.6.0",
     "ionicons": "^7.0.0",
     "lottie-react": "^2.4.0",
-    "mqtt": "^5.5.0",
+    "precompiled-mqtt": "^4.3.14-beta",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.1",
