--- a/PoliLockApp/package.json
+++ b/PoliLockApp/package.json
@@ -12,7 +12,7 @@
     "lint": "eslint"
   },
   "dependencies": {
-    "@capacitor/android": "^5.7.4",
+    "@capacitor/android": "5.7.4",
     "@capacitor/app": "5.0.7",
     "@capacitor/core": "5.7.4",
     "@capacitor/haptics": "5.0.7",
@@ -25,6 +25,8 @@
     "@types/react-lottie": "^1.2.10",
     "@types/react-router": "^5.1.20",
     "@types/react-router-dom": "^5.3.3",
+    "capacitor": "^0.5.6",
+    "chart.js": "^4.4.2",
     "date-fns": "^3.6.0",
     "ionicons": "^7.0.0",
     "lottie-react": "^2.4.0",
@@ -53,7 +55,7 @@
     "jsdom": "^22.1.0",
     "terser": "^5.4.0",
     "typescript": "^5.1.6",
-    "vite": "^5.0.0",
+    "vite": "5.2.8",
     "vitest": "^0.34.6"
   },
   "description": "An Ionic project"
